// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolshot components/Playlist/Playlist.tools.svelte: Default 1`] = `
<div>
   
  <span
    class="svelte-4mizr overlay"
    role="article"
  >
    <div
      class="content svelte-4mizr"
    >
      <span
        class="artwork svelte-4mizr"
      />
       
      <p
        class="controls svelte-4mizr"
      >
         
        <button
          class="primary iconOnly large svelte-sadb63"
          data-testid="play"
        >
          <i
            class="material-icons svelte-sadb63"
          >
            play_arrow
          </i>
           
           
           
        </button>
         
        <button
          class="primary iconOnly large svelte-sadb63"
          data-testid="enqueue"
        >
          <i
            class="material-icons svelte-sadb63"
          >
            playlist_add
          </i>
           
           
           
        </button>
      </p>
    </div>
     
    <header
      class="svelte-4mizr"
    >
      <h3
        class="svelte-4mizr"
      >
        My favourites
      </h3>
       
      <h4
        slot="details"
      >
        3 tracks
      </h4>
    </header>
  </span>
</div>
`;

exports[`Toolshot components/Playlist/Playlist.tools.svelte: Single track 1`] = `
<div>
   
  <span
    class="svelte-4mizr overlay"
    role="article"
  >
    <div
      class="content svelte-4mizr"
    >
      <span
        class="artwork svelte-4mizr"
      />
       
      <p
        class="controls svelte-4mizr"
      >
         
        <button
          class="primary iconOnly large svelte-sadb63"
          data-testid="play"
        >
          <i
            class="material-icons svelte-sadb63"
          >
            play_arrow
          </i>
           
           
           
        </button>
         
        <button
          class="primary iconOnly large svelte-sadb63"
          data-testid="enqueue"
        >
          <i
            class="material-icons svelte-sadb63"
          >
            playlist_add
          </i>
           
           
           
        </button>
      </p>
    </div>
     
    <header
      class="svelte-4mizr"
    >
      <h3
        class="svelte-4mizr"
      >
        My favourites
      </h3>
       
      <h4
        slot="details"
      >
        1 track
      </h4>
    </header>
  </span>
</div>
`;
